Fix z-index confilict, disable scroll zoom

--- a/docroot/themes/custom/pnp_bootstrap_sass/scss/components/user.scss
+++ b/docroot/themes/custom/pnp_bootstrap_sass/scss/components/user.scss
@@ -93,6 +93,10 @@
     border-radius: $border-radius-lg;
 }
 
+.account-modal {
+    z-index: 500 !important;
+}
+
 .account-modal-header h2 {
   font-size: inherit;
   margin: 0 $spacer;
