--- a/docroot/themes/custom/pnp_bootstrap_sass/scss/style.scss
+++ b/docroot/themes/custom/pnp_bootstrap_sass/scss/style.scss
@@ -363,6 +363,10 @@ form.form-search:before {
   margin-bottom: 105px;
 }
 
+.leaflet-touch-zoom  {
+  touch-action: none;
+}
+
 /* .path-explore .tabs {
   @extend .bg-light;
 } */
